--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
 
 </head>      
 <body>   
@@ -21,7 +22,7 @@
             <nav class="nav">
                 <ul class="site-nav">
                     <li class="nav-item"><a href="/index.html" class="link current first-current">Студия</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="link ">Портфолио</a></li>
+                                <li class="nav-item"><a href="./portfolio.html" class="link ">Портфолио</a></li>
                     <li class="nav-item"><a href="" class="link ">Контакты</a></li>
     
                 </ul>
@@ -29,7 +30,7 @@
             <ul class="site-link">
                 <li class="connection-item"><a href="mailto:info@devstudio.com" class="link"><svg class="connection-icon"
                             width="16px" height="12px">
-                            <use href="./images/icons&BG/icons.svg#icon-envelope"></use>
+                                   <use href="./images/icons&BG/icons.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a></li>
                 <li class="connection-item"><a href="tel:+380961111111" class="link ">
                         <svg class="connection-icon" width="10px" height="16px">
