перша модалка і попередні правки

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
             
             <ul class="exampls card-set">
                 <li class="one-exampl">
-                     <a href="" class="link">
+                     <a href="" class="exampl-link link">
                         <div class="exampl-wrap">
                             <img src="./images/img(1)(1).jpg" alt="Технокряк" width="370">
                             <p class="exampl-text">
